# bms-translator

./: .gitignore  1.py  README.md  bmsConfig·.json  main.py  pyproject.toml  requirements.txt  ui.spec  update_version.ps1
.github/: build_installer.ps1  update_version.ps1
.github/workflows/: release.yml
config/: bmsConfig.json  bmsConfig.yaml
data/: BVIN1枪.CSV  bms11334_8b4b_1.xls  juzhixing.csv  soc95％-100％报文5.26主枪报文(1).CSV
docs/: sendto.md
src/: bmsConfig.json  bmsConfig·.json  check_BMS_json.py  check_sys.py  main.py  ui.py  utils.py
test/: 1.py
