[project]
name = "bms-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "auto-py-to-exe>=2.46.0",
    "chardet>=5.2.0",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
