[project]
name = "bms-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auto-py-to-exe>=2.46.0",
    "chardet>=5.2.0",
    "openpyxl>=3.1.5",
    "pywin32>=310",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"